<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.dongnh.autosoundmode.viewmodel.MainViewModel" />

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".view.MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_common">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_common"
                android:background="@drawable/background_inputtext"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="@dimen/padding_inside_cardview"
                android:weightSum="1">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4"
                    android:text="@string/main_time_start" />

                <EditText
                    android:id="@+id/view_date_start"
                    style="@style/EditTextThemeNormal"
                    android:layout_width="0dp"
                    android:focusable="false"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.6"
                    android:background="@drawable/background_inputtext"
                    android:drawableEnd="@drawable/ic_datetime"
                    android:text="@={viewModel.timeStart}" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_common"
                android:background="@drawable/background_inputtext"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="@dimen/padding_inside_cardview"
                android:weightSum="1">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4"
                    android:text="@string/main_time_end" />

                <EditText
                    android:id="@+id/view_date_end"
                    style="@style/EditTextThemeNormal"
                    android:layout_width="0dp"
                    android:focusable="false"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.6"
                    android:background="@drawable/background_inputtext"
                    android:drawableEnd="@drawable/ic_datetime"
                    android:text="@={viewModel.timeEnd}" />

            </LinearLayout>

            <CheckBox
                android:id="@+id/is_work_day"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/margin_common"
                android:text="@string/main_word_day"
                android:checked="@={viewModel.workday}"
                style="@style/RobotoTextViewStyle"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:weightSum="3"
                android:layout_marginTop="@dimen/margin_common"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/view_normal"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_marginEnd="@dimen/margin_common"
                    android:orientation="vertical"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="@dimen/height_image_big"
                        android:adjustViewBounds="true"
                        android:scaleType="centerCrop"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/margin_common"
                        android:layout_marginBottom="@dimen/margin_common"
                        android:src="@drawable/ic_sound"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:layout_width="match_parent"
                        android:textColor="@color/black"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:lines="2"
                        android:layout_marginBottom="@dimen/margin_common"
                        android:text="@string/main_view_sound"
                        style="@style/RobotoTextViewStyleLargerWrap"
                        android:layout_height="wrap_content" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:gravity="center"
                        android:layout_gravity="center"
                        android:clickable="false"
                        android:checked="@={viewModel.isNormal}"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:id="@+id/view_vibrate"
                    android:layout_marginEnd="@dimen/margin_common"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="@dimen/height_image_big"
                        android:adjustViewBounds="true"
                        android:scaleType="centerCrop"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/margin_common"
                        android:layout_marginBottom="@dimen/margin_common"
                        android:src="@drawable/ic_vibrate"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:layout_width="match_parent"
                        android:textColor="@color/black"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:layout_marginBottom="@dimen/margin_common"
                        android:lines="2"
                        android:text="@string/main_view_vibrate"
                        style="@style/RobotoTextViewStyleLargerWrap"
                        android:layout_height="wrap_content" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:gravity="center"
                        android:layout_gravity="center"
                        android:clickable="false"
                        android:checked="@={viewModel.isVibrate}"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:id="@+id/view_silent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="@dimen/height_image_big"
                        android:adjustViewBounds="true"
                        android:scaleType="centerCrop"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/margin_common"
                        android:layout_marginBottom="@dimen/margin_common"
                        android:src="@drawable/ic_silent"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:layout_width="match_parent"
                        android:textColor="@color/black"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:lines="2"
                        android:layout_marginBottom="@dimen/margin_common"
                        android:text="@string/main_view_silent"
                        style="@style/RobotoTextViewStyleLargerWrap"
                        android:layout_height="wrap_content" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:gravity="center"
                        android:layout_gravity="center"
                        android:clickable="false"
                        android:checked="@={viewModel.isSilent}"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_alignParentBottom="true"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:weightSum="1"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_execute"
                    android:layout_width="0dp"
                    android:layout_weight="0.5"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_common"
                    android:background="@drawable/background_button"
                    android:text="@string/main_btn_execute"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:textSize="@dimen/size_text_btn" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_cancel"
                    android:layout_width="0dp"
                    android:layout_weight="0.5"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_margin="@dimen/margin_common"
                    android:background="@drawable/background_button_yedllow"
                    android:text="@string/main_btn_cancel"
                    android:textColor="@color/white"
                    android:textSize="@dimen/size_text_btn" />

            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_exit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_margin="@dimen/margin_common"
                android:background="@drawable/background_button_red"
                android:text="@string/main_btn_exit"
                android:textColor="@color/white"
                android:textSize="@dimen/size_text_btn" />

        </LinearLayout>

    </RelativeLayout>

</layout>